# decy

./: .clippy.toml  .gitignore  .pmat-gates.toml  .pmat-metrics.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FINAL_SESSION_SUMMARY.md  GEMINI.md  GETTING_STARTED.md  GOLDEN_TRACE_INTEGRATION_SUMMARY.md  INSTALL.md  KR_COMPLETION_CHECKLIST.md  MUTATION_TESTING_IMPROVEMENTS.md  MUTATION_TESTING_REPORT.md  Makefile  PERFORMANCE_BASELINE.md  PROJECT_STATUS.md  README.md  RELEASE_PREPARATION.md  RENACER_ADVANCED_INTEGRATION.md  RENACER_INTEGRATION_GUIDE.md  SESSION_SUMMARY.md  SESSION_SUMMARY_2025-11-04.md  SPRINT_1_COMPLETE.md  STATUS_UPDATE.md  VALIDATION_REPORT.md  VALIDATION_REPORT_E2E.md  binary_tree  binary_tree.rs  book.toml  bt  clippy.toml  decy-clusters.toml  decy-quality.toml  hash_table  hash_table.rs  increment_decrement.rs  (+18 more)
crates/decy/: Cargo.toml
crates/decy-agent/: Cargo.toml
crates/decy-agent/src/: lib.rs
crates/decy-analyzer/: Cargo.toml
crates/decy-analyzer/benches/: analyzer_benchmarks.rs
crates/decy-analyzer/src/: lib.rs  lock_analysis.rs  output_params.rs  patterns.rs  subprocess_analysis.rs  tagged_union_analysis.rs  void_ptr_analysis.rs
crates/decy-analyzer/tests/: lock_analysis_tests.rs  output_params_tests.rs  subprocess_analysis_tests.rs  tagged_union_tests.rs  void_ptr_analysis_tests.rs
crates/decy-book/: Cargo.toml
crates/decy-book/src/: lib.rs
crates/decy-codegen/: Cargo.toml
crates/decy-codegen/benches/: codegen_benchmarks.rs
crates/decy-codegen/examples/: malloc_to_box.rs
crates/decy-codegen/proptest-regressions/: property_tests.txt
crates/decy-codegen/src/: box_transform.rs  box_transform_coverage_tests.rs  class_codegen_tests.rs  codegen_coverage_tests.rs  codegen_deep_coverage_tests.rs  codegen_deep_coverage_tests_part1.rs  codegen_deep_coverage_tests_part10.rs  codegen_deep_coverage_tests_part11.rs  codegen_deep_coverage_tests_part12.rs  codegen_deep_coverage_tests_part13.rs  codegen_deep_coverage_tests_part14.rs  codegen_deep_coverage_tests_part15.rs  codegen_deep_coverage_tests_part16.rs  codegen_deep_coverage_tests_part2.rs  codegen_deep_coverage_tests_part3.rs  codegen_deep_coverage_tests_part4.rs  codegen_deep_coverage_tests_part5.rs  codegen_deep_coverage_tests_part6.rs  codegen_deep_coverage_tests_part7.rs  codegen_deep_coverage_tests_part8.rs  codegen_deep_coverage_tests_part9.rs  codegen_remaining_tests.rs  codegen_tests.rs  concurrency_transform.rs  coverage_tests.rs  enum_gen.rs  expr_codegen_deep2_tests.rs  expr_gen.rs  expr_stmt_deep_tests.rs  expr_target_deep_tests.rs  expression_coverage_tests.rs  expression_deep_branch_tests.rs  expression_target_type_tests.rs  for_loop_codegen_tests.rs  format_and_sig_tests.rs  format_specifier_tests.rs  func_gen.rs  func_gen_array.rs  func_gen_generate.rs  func_gen_generate_function_with_lifetimes.rs  (+31 more)
crates/decy-codegen/tests/: array_index_type_test.rs  array_parameter_slice_test.rs  array_ptr_arithmetic_test.rs  bitwise_operators_documentation_test.rs  bool_type_documentation_test.rs  box_default_test.rs  calloc_to_vec_test.rs  cast_operators_documentation_test.rs  char_int_coercion_test.rs  complex_macro_expansion_test.rs  compound_assignment_test.rs  compound_literals_documentation_test.rs  define_const_test.rs  define_macro_documentation_test.rs  designated_initializers_documentation_test.rs  e2e_examples_test.rs  end_to_end_test.rs  enums_documentation_test.rs  flexible_array_members_documentation_test.rs  for_loop_declarations_documentation_test.rs  free_to_drop_test.rs  function_like_macro_expansion_test.rs  function_like_macro_property_tests.proptest-regressions  function_like_macro_property_tests.rs  function_pointer_codegen_test.rs  function_pointer_property_tests.rs  function_pointers_documentation_test.rs  goto_documentation_test.rs  hexadecimal_float_literals_documentation_test.rs  ifdef_documentation_test.rs  include_documentation_test.rs  inline_functions_documentation_test.rs  integration_test.rs  long_long_type_documentation_test.rs  macro_expansion_constants_test.rs  macro_expansion_property_tests.proptest-regressions  macro_expansion_property_tests.rs  malloc_ptr_test.rs  malloc_size_precedence_test.rs  malloc_struct_ptr_test.rs  (+42 more)
crates/decy-core/: Cargo.toml
crates/decy-core/benches/: pipeline_benchmarks.rs
crates/decy-core/examples/: README.md  buffer_overflow_safety_demo.rs  conversion.rs  cpp_class_transpile_demo.rs  cpp_full_program_demo.rs  cpp_inheritance_demo.rs  cpp_namespace_demo.rs  cpp_new_delete_demo.rs  cpp_operator_demo.rs  cuda_kernel_ffi_demo.rs  cuda_transpile_demo.rs  dogfood_validation_demo.rs  double_free_safety_demo.rs  dynamic_memory_safety_demo.rs  format_string_safety_demo.rs  integer_overflow_safety_demo.rs  loop_array_safety_demo.rs  null_pointer_safety_demo.rs  pointer_arithmetic_safety_demo.rs  race_condition_safety_demo.rs  string_safety_demo.rs  type_casting_safety_demo.rs  uninitialized_memory_safety_demo.rs  use_after_free_safety_demo.rs
crates/decy-core/src/: lib.rs  metrics.rs  optimize.rs  tests.rs  trace.rs
crates/decy-core/tests/: README.md  array_param_ref_tests.rs  array_parameter_test.rs  basic_transpilation_test.rs  buffer_overflow_property_tests.rs  buffer_overflow_safety_integration_test.rs  c_allocator_falsification_tests.rs  c_audio_dsp_falsification_tests.rs  c_automata_falsification_tests.rs  c_bitwise_falsification_tests.rs  c_blockchain_falsification_tests.rs  c_bloomfilter_falsification_tests.rs  c_buildsystem_falsification_tests.rs  c_cachesystems_falsification_tests.rs  c_checksum_falsification_tests.rs  c_codec_falsification_tests.rs  c_commandpattern_falsification_tests.rs  c_compiler_falsification_tests.rs  (+136 more)
crates/decy-debugger/: Cargo.toml
crates/decy-hir/: Cargo.toml
crates/decy-llm/: Cargo.toml
crates/decy-mcp/: Cargo.toml
crates/decy-oracle/: Cargo.toml
crates/decy-ownership/: Cargo.toml
crates/decy-parser/: Cargo.toml
crates/decy-repo/: Cargo.toml
crates/decy-stdlib/: Cargo.toml
crates/decy-verify/: Cargo.toml
(+901 files in other folders)
