[workspace]
resolver = "2"
members = [
    "crates/decy-core",
    "crates/decy-parser",
    "crates/decy-hir",
    "crates/decy-analyzer",
    "crates/decy-ownership",
    "crates/decy-verify",
    "crates/decy-codegen",
    "crates/decy-debugger",
    "crates/decy-book",
    "crates/decy-agent",
    "crates/decy-mcp",
    "crates/decy-repo",
    "crates/decy-oracle",
    "crates/decy", "crates/decy-stdlib",
    "crates/decy-llm",
]

[workspace.package]
version = "2.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Decy Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/decy"
homepage = "https://github.com/paiml/decy"
documentation = "https://docs.rs/decy"
keywords = ["c", "rust", "transpiler", "compiler", "static-analysis"]
categories = ["development-tools", "compilers", "command-line-utilities"]

[workspace.dependencies]
# Core dependencies
clang-sys = { version = "1.7", features = ["clang_3_9"] }
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

# Data structures
petgraph = "0.6"  # For dependency graphs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"

# Cryptography
sha2 = "0.10"  # For SHA-256 hashing (cache invalidation)

# Directory traversal
walkdir = "2.4"

# Testing
proptest = "1.4"
criterion = "0.5"
tempfile = "3.8"
assert_cmd = "2.0"  # For CLI contract testing
predicates = "3.0"  # For CLI assertion predicates

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }
indicatif = "0.17"
console = "0.15"
colored = "2.1"  # For terminal colors (debugger)

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Spydecy debugger integration
spydecy-debugger = "0.2.0"

[workspace.lints.rust]
unsafe_code = "deny"
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common pedantic lints that are too noisy
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[package.metadata.release]
shared-version = true
