[package]
name = "decy-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Background daemon for incremental transpilation and watching"

[dependencies]

[dev-dependencies]
