[package]
name = "decy-analyzer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Static analysis and type inference for C code"

[dependencies]
decy-hir = { version = "2.0.0", path = "../decy-hir" }
petgraph.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "analyzer_benchmarks"
harness = false
