[package]
name = "decy-book"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Book-based verification for transpiled Rust code"

[dependencies]

[dev-dependencies]
