[package]
name = "decy-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Rust code generation from HIR with minimal unsafe blocks"

[dependencies]
decy-hir = { version = "1.0.0", path = "../decy-hir" }
decy-analyzer = { version = "1.0.0", path = "../decy-analyzer" }
decy-ownership = { version = "1.0.0", path = "../decy-ownership" }
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
decy-parser = { version = "1.0.0", path = "../decy-parser" }
decy-core = { version = "1.0.0", path = "../decy-core" }
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "codegen_benchmarks"
harness = false
