[package]
name = "decy-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core transpilation pipeline for C-to-Rust conversion"

[dependencies]
decy-parser = { version = "1.0.2", path = "../decy-parser" }
decy-hir = { version = "1.0.2", path = "../decy-hir" }
decy-analyzer = { version = "1.0.2", path = "../decy-analyzer" }
decy-ownership = { version = "1.0.2", path = "../decy-ownership" }
decy-verify = { version = "1.0.2", path = "../decy-verify" }
decy-codegen = { version = "1.0.2", path = "../decy-codegen" }
decy-stdlib = { version = "1.0.2", path = "../decy-stdlib" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
petgraph.workspace = true
sha2.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "pipeline_benchmarks"
harness = false
