[package]
name = "decy-debugger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Interactive debugger for Decy C-to-Rust transpiler with spydecy integration"

[dependencies]
# Core decy dependencies
decy-parser = { version = "2.0.0", path = "../decy-parser" }
decy-hir = { version = "2.0.0", path = "../decy-hir" }
decy-ownership = { version = "2.0.0", path = "../decy-ownership" }
decy-codegen = { version = "2.0.0", path = "../decy-codegen" }

# Spydecy debugger integration
spydecy-debugger = "0.2.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization for output formats
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal colors and formatting
colored = "2.1"

# Graph visualization (for dataflow/ownership graphs)
petgraph = "0.6"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"
