[package]
name = "decy-hir"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "High-level Intermediate Representation for C-to-Rust transpilation"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
decy-parser = { path = "../decy-parser" }

[dev-dependencies]
proptest.workspace = true
decy-parser = { path = "../decy-parser" }
