[package]
name = "decy-oracle"
description = "CITL oracle integration for decy C→Rust transpiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
decy-hir = { path = "../decy-hir" }
decy-ownership = { path = "../decy-ownership" }
entrenar = { version = "0.2.1", features = ["citl"], optional = true }
alimentar = { version = "0.2.0", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }

[features]
default = []
citl = ["entrenar"]
dataset = ["alimentar"]
