[package]
name = "decy-oracle"
version = "1.0.2"
edition = "2021"
authors = ["PAIML <hello@paiml.com>"]
description = "CITL (Compiler-in-the-Loop) oracle for C-to-Rust transpilation pattern mining"
repository = "https://github.com/paiml/decy"
license = "MIT"
keywords = ["transpiler", "citl", "machine-learning", "c-to-rust"]

[features]
default = []
# Full CITL with entrenar integration
citl = ["entrenar"]

[dependencies]
# PAIML stack - CITL integration (optional, enabled with citl feature)
# Use local path to avoid version conflicts
entrenar = { path = "../../../entrenar", features = ["citl"], optional = true }

# Core decy crates
decy-parser = { path = "../decy-parser" }
decy-hir = { path = "../decy-hir" }
decy-codegen = { path = "../decy-codegen" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Config and paths
dirs = "5.0"
walkdir = "2.4"

# Timestamps and hashing
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"

# Logging
tracing = "0.1"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
