[package]
name = "decy-ownership"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Ownership and lifetime inference for C-to-Rust conversion (CRITICAL)"

[dependencies]
decy-hir = { version = "1.0.2", path = "../decy-hir" }
decy-analyzer = { version = "1.0.2", path = "../decy-analyzer" }
petgraph.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
proptest.workspace = true
