[package]
name = "decy-repo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "GitHub repository transpilation with parallel processing"

[dependencies]
decy-core = { version = "0.2.0", path = "../decy-core" }
git2.workspace = true
octocrab.workspace = true
tokio.workspace = true
rayon.workspace = true
petgraph.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
proptest.workspace = true
