[package]
name = "decy-stdlib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "C standard library prototypes for the Decy C-to-Rust transpiler"

[dependencies]
