[package]
name = "decy-verify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Safety property verification for transpiled Rust code"

[dependencies]
decy-hir = { path = "../decy-hir" }
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
