[package]
name = "decy-verify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Safety property verification for transpiled Rust code"

[dependencies]
decy-hir = { version = "2.0.0", path = "../decy-hir" }
decy-analyzer = { version = "2.0.0", path = "../decy-analyzer" }
syn = { workspace = true, features = ["visit"] }
quote.workspace = true
proc-macro2.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
