[package]
name = "decy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI tool for C-to-Rust transpilation with EXTREME quality standards"

[dependencies]
decy-core = { version = "1.0.0", path = "../decy-core" }
decy-verify = { version = "1.0.0", path = "../decy-verify" }
decy-agent = { version = "1.0.0", path = "../decy-agent" }
decy-mcp = { version = "1.0.0", path = "../decy-mcp" }
decy-repo = { version = "1.0.0", path = "../decy-repo" }
decy-book = { version = "1.0.0", path = "../decy-book" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
indicatif.workspace = true
console.workspace = true
serde.workspace = true
serde_json.workspace = true
rustyline = "13.0"
walkdir.workspace = true

[dev-dependencies]
proptest.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
